--- a/index.html
+++ b/index.html
@@ -29,9 +29,111 @@
                 </li>
             </ul>
         </header>
+        <div class="banner">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/banner.png?raw=true" alt="banner-image">
+        </div>
         <div class="main">
-            <div class="banner">
-                <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/banner.png?raw=true" alt="banner-image">
+            <div class="menu">
+                <h2>甜點類別</h2>
+                <ul class="menuList">
+                    <li class="menuItem">
+                        <a href="#">所有甜點（48）</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="#">本日精選（10）</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="#">人氣推薦（26）</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="#">新品上市（12）</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="product">
+                <ul class="productList">
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-2.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-3.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-4.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-5.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                    <li class="productItem">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-6.png?raw=true" alt="dessert-picture">
+                        <div class="productTitle">
+                            <p>焦糖馬卡龍</p>
+                            <span>NT$ 450</span>
+                        </div>
+                        <div class="shopping">
+                            <a href="#">加入購物車</a>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="pagination">
+                    <li class="pageItem">
+                        <a href="#">
+                            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_left.png?raw=true" alt="previous-page">
+                        </a>
+                    </li>
+                    <li class="pageItemNum">
+                        <a href="#">1</a>
+                    </li>
+                    <li class="pageItemNum">
+                        <a href="#">2</a>
+                    </li>
+                    <li class="pageItemNum">
+                        <a href="#">3</a>
+                    </li>
+                    <li class="pageItem">
+                        <a href="#">
+                            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_right.png?raw=true" alt="next-page">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <footer class="footer">
