feat: build environment

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <ul class="productList">
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -64,6 +66,8 @@
                     </li>
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-2.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -74,6 +78,8 @@
                     </li>
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-3.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -84,6 +90,8 @@
                     </li>
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-4.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -94,6 +102,8 @@
                     </li>
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-5.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -104,6 +114,8 @@
                     </li>
                     <li class="productItem">
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-6.png?raw=true" alt="dessert-picture">
+                        <p class="featured">本日精選</p>
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true" alt="like" class="likeIcon">
                         <div class="productTitle">
                             <p>焦糖馬卡龍</p>
                             <span>NT$ 450</span>
@@ -134,6 +146,18 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+        </div>
+    </div>
+    <div class="fullPageContainer">
+        <div class="subscribe">
+            <div class="callToAction">
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/f70f00178a7f0baa31e9c01634303d8562cfe93a/student-week1/logo-light.svg" alt="Sweetaste" class="subscribeLogo">
+                <p>訂閱你我的甜蜜郵件</p>
+            </div>
+            <div class="mail">
+                <input type="email">
+                <a href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/arrow_forward-24px.png?raw=true" alt="arrow-forward"></a>
             </div>
         </div>
         <footer class="footer">
